--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ListChracters">
 
-        <activity android:name=".ui.actvities.FormularioPersonagensActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".ui.actvities.FormularioPersonagensActivity"/>
 
         <activity android:name=".ui.actvities.ListaPersonagemActivity">
             <intent-filter>
